[package]
name = "noether"
version = "0.1.0"
authors = ["Josh Mitchell <yoshanuikabundi@gmail.com>"]
edition = "2018"

readme = "README.md"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
uom = "0.26" # MIT/Apache-2.0
rand = "0.7" # MIT/Apache-2.0
rand_distr = "0.2" # MIT/Apache-2.0
itertools = "0.8" # MIT/Apache-2.0
chemfiles = "0.9" # BSD-3-Clause
more-asserts = "0.2.1" # CC0 (Public domain)

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "minimum_image_convention"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", ".cargo/katex.html" ]
